--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -11,7 +11,10 @@
   font-weight: bold;
 }
 
-a:hover, a:link, a:active, a:visited {
+a:hover,
+a:link,
+a:active,
+a:visited {
   text-decoration: none;
 }
 
@@ -54,9 +57,19 @@ a:hover, a:link, a:active, a:visited {
 }
 
 .bg-green {
-  background-color: #00C851;
+  background-color: #00c851;
 }
 
 .bg-orange {
   background-color: #ffbb33;
+}
+
+.bg-light-grey {
+  background-color: #bfbfbf;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 85%;
+  }
 }
